// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`copy-document-type should copy a document type to a folder 1`] = `
{
  "content": [
    {
      "text": "{"id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`copy-document-type should copy a document type to root 1`] = `
{
  "content": [
    {
      "text": "{"id":"00000000-0000-0000-0000-000000000000"}",
      "type": "text",
    },
  ],
}
`;

exports[`copy-document-type should handle non-existent document type 1`] = `
{
  "content": [
    {
      "text": "Error: AxiosError: Request failed with status code 404",
      "type": "text",
    },
  ],
}
`;
